Complete login/logout logic
With full integration with FastAPI + Svelte, Login and Logout, with state management via JWT(JSON Web Token) is completed! OwO

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ SQLALCHEMY_DB_SQLITE3_PATH="sqlite:///kcx.db"
 TEST_ACCOUNT_ID="test"
 TEST_ACCOUNT_PW="test"
 TEST_ACCOUNT_EMAIL="test@kcx.org"
+
+# An example SECRET KEY for JWT. Change this to a random in production!
+JWT_SECRET_KEY="KCXU$3R$3CR3T4JWT_"
+JWT_TOKEN_EXPIRES_MINUTES=60
