--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "sass": "^1.77.1",
     "svelte": "^4.2.12",
     "vite": "^5.2.0"
   },
