--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "sass": "^1.77.1",
     "svelte": "^4.2.12",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
   "dependencies": {
