--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "autoprefixer": "^10.4.19",
+    "number-flip": "^1.1.10",
     "postcss": "^8.4.38",
     "sass": "^1.77.1",
     "svelte": "^4.2.12",
