--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "autoprefixer": "^10.4.19",
-    "number-flip": "^1.1.10",
     "postcss": "^8.4.38",
     "sass": "^1.77.1",
     "svelte": "^4.2.12",
@@ -19,7 +18,10 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@layflags/rolling-number": "^1.0.0",
     "bootstrap": "^5.3.3",
+    "countup.js": "^2.8.0",
+    "odometer_countup": "^1.0.4",
     "svelte-spa-router": "^4.0.1",
     "sweetalert2": "^11.10.8"
   }
