--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ TEST_ACCOUNT_EMAIL="test@kcx.org"
 # An example SECRET KEY for JWT. Change this to a random in production!
 JWT_SECRET_KEY="KCXU$3R$3CR3T4JWT_"
 JWT_TOKEN_EXPIRES_MINUTES=360 # 6 hours
+
+# A custom API server built with Redis
+REDIS_HOST="localhost"
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_UDPATE_INTERVAL_IN_SECONDS=1
