--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       - db-sqlite3
     networks:
       - kcx-network
+    volumes:
+      - ./database:/app/database  # Ensure the backend has access to the database files
+    environment:
+      - IS_IN_KCX_BACKEND_DOCKER=TRUE
 
   frontend:
     build:
@@ -43,9 +47,9 @@ services:
   db-sqlite3:
     image: "nouchka/sqlite3"
     volumes:
-      - ./data:/data
+      - ./database:/data  # Mount the host directory to persist the SQLite files
     environment:
-      SQLITE_DATABASE: "kcx.db"
+      SQLITE_DATABASE: "/data/kcx.db"  # Ensure the database is stored in the mounted volume
     ports:
       - "8080:8080"
     networks:
