--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
         ssl_certificate /etc/letsencrypt/live/knightchaser.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/knightchaser.com/privkey.pem;
 
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
@@ -34,3 +34,4 @@ http {
         }
     }
 }
+
