Selectively apply TLS/SSL meta tag according to the env
If you're testing the local environments(according to the VITE_BACKEND_API_URL's address starts with "http"), TLS/SSL meta tag (upgrade-insecure-requests) won't be applied. In deployment with TLS/SSL, it will be applied.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
-VITE_BACKEND_API_URL="https://kcx.knightchaser.com/api"
+# PRODUCTION
+# VITE_BACKEND_API_URL="https://kcx.knightchaser.com/api"
 
-
+# LOCAL (DEVELOPMENT)
+VITE_BACKEND_API_URL="http://127.0.0.1:8000/api"
