Making user asset leaderboard
Calculate the user's total asset value periodically and calculate the ranking, then show the data on the /leaderboard page.

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ JWT_TOKEN_EXPIRES_MINUTES=360 # 6 hours
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_UDPATE_INTERVAL_IN_SECONDS=1
+USER_RANKING_UPDATE_INTERVAL_IN_SECONDS=10
