Controlling deposit/withdraw policy by the admin
So the users won't troll

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ SQLALCHEMY_DB_SQLITE3_PATH="sqlite:///kcx.db"
 TEST_ACCOUNT_ID="test"
 TEST_ACCOUNT_PW="test"
 TEST_ACCOUNT_EMAIL="test@kcx.org"
+STARTING_BALANCE_IN_KRW=20000000000 # 20 billion KRW
 
 # An example SECRET KEY for JWT. Change this to a random in production!
 JWT_SECRET_KEY="KCXU$3R$3CR3T4JWT_"
@@ -13,3 +14,8 @@ REDIS_PORT=6379
 REDIS_DB=0
 REDIS_UDPATE_INTERVAL_IN_SECONDS=1
 USER_RANKING_UPDATE_INTERVAL_IN_SECONDS=10
+
+# Service configuration
+# - Money balance (Disable(false) this if you want to use a fixed starting balance for all users)
+ALLOW_ARBITRARY_BALANCE_DEPOSIT=false
+ALLOW_ARBITRARY_BALANCE_WITHDRAW=false
