Arrange backend stuff under /backend

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SQLALCHEMY_DB_SQLITE3_PATH="sqlite:///kcx.db"
+SQLALCHEMY_DB_SQLITE3_FILENAME="kcx.db"
 
 TEST_ACCOUNT_ID="test"
 TEST_ACCOUNT_PW="test"
