Refactor site structure + user page
Except for the asset tracking page because it's related to the exchange site

(Progress of solving issues #2)

--- a/frontend/.env
+++ b/frontend/.env
@@ -3,3 +3,6 @@
 
 # LOCAL (DEVELOPMENT)
 VITE_BACKEND_API_URL="http://127.0.0.1:8000/api"
+
+# Administrator account mark
+VITE_ADMIN_ACCOUNT_ID="knightchaser"
