--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --host"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "sass": "^1.77.1",
-    "svelte": "^4.2.12",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "vite-plugin-mkcert": "^1.17.5"
-  },
-  "dependencies": {
-    "@layflags/rolling-number": "^1.0.0",
-    "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
-    "countup.js": "^2.8.0",
-    "cropperjs": "^1.6.2",
-    "odometer_countup": "^1.0.4",
-    "query-string": "^9.0.0",
-    "svelte-spa-router": "^4.0.1",
-    "sweetalert2": "^11.10.8"
-  }
+	"name": "frontend",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@fontsource/fira-mono": "^4.5.10",
+		"@neoconfetti/svelte": "^1.0.0",
+		"@rollup/plugin-commonjs": "^26.0.1",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.13",
+		"autoprefixer": "^10.4.19",
+		"flowbite": "^2.3.0",
+		"flowbite-svelte": "^0.46.4",
+		"flowbite-svelte-icons": "^1.6.1",
+		"postcss": "^8.4.38",
+		"svelte": "^4.2.7",
+		"tailwindcss": "^3.4.4",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.7.2",
+		"cropperjs": "^1.6.2",
+		"sweetalert2": "^11.12.0"
+	}
 }
